- Fix bug #49528 (UTF-16 strings prefixed by BOM wrongly converted).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@288260 c90b9560-bf6c-de11-be94-00142212c4b1